@@ -276,7 +276,8 @@ a {
 a:hover {
   text-decoration: underline;
 }
-*:hover > a.toc-backref:after {
+*:hover > a.toc-backref:after,
+.topic-title:hover > a:after {
   content: " \2191"; /* ↑ UPWARDS ARROW */
   color: grey;
 }
