@@ -14,7 +14,7 @@
 <h1 class="title">Additional tests with HTML 5</h1>
 
 <nav class="contents" id="contents" role="doc-toc">
-<p class="topic-title">Contents</p>
+<p class="topic-title"><a class="reference internal" href="#top">Contents</a></p>
 <ul class="simple">
 <li><p><a class="reference internal" href="#section-heading-levels" id="toc-entry-1">Section heading levels</a></p></li>
 <li><p><a class="reference internal" href="#level-1" id="toc-entry-2">Level 1</a></p>
