@@ -51,7 +51,7 @@ to templates.  DO NOT USE THIS HTML FILE AS YOUR TEMPLATE!
 </table>
 <hr />
 <div class="contents topic" id="contents">
-<p class="topic-title">Contents</p>
+<p class="topic-title"><a class="reference internal" href="#top">Contents</a></p>
 <ul class="simple">
 <li><a class="reference internal" href="#abstract" id="toc-entry-1">Abstract</a></li>
 <li><a class="reference internal" href="#copyright" id="toc-entry-2">Copyright</a></li>
