@@ -84,7 +84,7 @@ transforms to after the document title, subtitle, and docinfo. -->
 They are transformed from section titles after parsing. -->
 <!-- bibliographic fields (which also require a transform): -->
 <div class="contents topic" id="table-of-contents">
-<p class="topic-title">Table of Contents</p>
+<p class="topic-title"><a class="reference internal" href="#top">Table of Contents</a></p>
 <ul class="auto-toc simple">
 <li><a class="reference internal" href="#structural-elements" id="toc-entry-1">1&nbsp;&nbsp;&nbsp;Structural Elements</a><ul class="auto-toc">
 <li><a class="reference internal" href="#section-title" id="toc-entry-2">1.1&nbsp;&nbsp;&nbsp;Section Title</a></li>
