@@ -83,7 +83,7 @@ transforms to after the document title, subtitle, and docinfo. -->
 They are transformed from section titles after parsing. -->
 <!-- bibliographic fields (which also require a transform): -->
 <nav class="contents" id="table-of-contents" role="doc-toc">
-<p class="topic-title">Table of Contents</p>
+<p class="topic-title"><a class="reference internal" href="#top">Table of Contents</a></p>
 <ul class="auto-toc simple">
 <li><p><a class="reference internal" href="#structural-elements" id="toc-entry-1"><span class="sectnum">1 </span>Structural Elements</a></p>
 <ul class="auto-toc">
